Fix link item spacing when not empty

--- a/frontend/src/components/MetadataList/MetadataList.module.scss
+++ b/frontend/src/components/MetadataList/MetadataList.module.scss
@@ -29,7 +29,7 @@
     }
   }
 
-  &.preview .linkItem:not(:first-child) {
+  &.preview .linkItem.empty:not(:first-child) {
     @apply mt-1;
   }
 }
